# multispecies_fuelcycle

./: .gitignore  CITATION.cff  README.md  pyproject.toml  requirements.txt
examples/: reactivities_vs_temperature.ipynb
examples/DDstartup/: Tdot.ipynb  lump_verification.ipynb  tseeded_example.ipynb  tseeded_verification.ipynb
examples/Multispecies/: multispecies_DHe3.ipynb  multispecies_DHe3_CoppisMatch.ipynb  multispecies_DHe3_reinjection.ipynb  multispecies_DT_Istartup.ipynb  multispecies_DTlean.ipynb  multispecies_DTlean_50Istartup.ipynb  multispecies_DTlean_DDstartup.ipynb  multispecies_DTrich.ipynb  multispecies_reproduce_lump.ipynb  multispecies_reproduce_tseeded.ipynb  reactor_parameters.py
inputs/: ee_lump.yaml  ee_tseeded.yaml  parametric_lump.yaml  parametric_mixedfuelcycle.yaml  parametric_tseeded.yaml  params_mixedfuelcycle.yaml  postprocess_final.yaml  sobol_tseeded.yaml
src/: __init__.py  __main__.py  main.py
src/economics/: __init__.py  economics_functions.py
src/methods/: __init__.py  elemeffects_computation.py  parametric_computation.py  sobol_computation.py
src/physics/: Tseeded_functions.py  lump_functions.py  multispecies_functions.py  multispecies_injection.py  power_balance.py  radiation.py  reactivity_functions.py
src/postprocessing/: __init__.py  __main__.py  check_h5_vectors.ipynb  cli.py  combine_ee_results.ipynb  compare_results.py  fit_ML_method.py  plot_ML_pdp.py  plot_contour_functions.py  plot_elementary_effects.py  plot_importance_matrix.py  plot_kde_functions.py  plot_kmeans_functions.py  plot_parcoords_functions.py  plot_pdf_functions.py  plot_quartile_probability_functions.py  plot_shap_functions.py  plot_strips.py  plot_surface3d.py  plot_utils_functions.py  postprocess_functions.py
src/registry/: __init__.py  parameter_registry.py  parameters_registry.yaml  reactions_registry.yaml  species_registry.yaml  tags_registry.yaml
src/utils/: filters.py  io_functions.py  reactivity_lookup.py  system_profiler.py  tools.py  yaml_utils.py
tests/: conftest.py  test_economics_functions.py  test_lump_functions.py  test_main.py  test_main_multispecies.py  test_multispecies_functions.py  test_power_balance.py  test_radiation.py  test_reactivity_functions.py  test_tseeded_functions.py
tests/fixtures/: elementary_effects_lump.yaml  elementary_effects_tseeded.yaml  parametric_lump.yaml  parametric_tseeded.yaml  params_main_test.yaml  params_test.yaml  sobol_lump.yaml
